--- a/templates/index.html
+++ b/templates/index.html
@@ -177,9 +177,9 @@
     </header>
 
     {% if similarity_results %}
-    <div class="back-button">
+    <!-- <div class="back-button">
         <a href="/category/{{ category }}">← Back to {{ category.replace('_', ' ') }}</a>
-    </div>
+    </div> -->
     {% endif %}
 
     <div id="search-form">
